deed_files = [
  'by.png',
  'cc-logo.jpg',
  'deed-foot-green.png',
  'deed-foot-grey.png',
  'deed-foot-red.png',
  'deed-foot-yellow.png',
  'deed-head-green.png',
  'deed-head-grey.png',
  'deed-head-red.png',
  'deed-head-yellow.png',
  'devnations.png',
  'freedoms-header.png',
  'limitations-header.png',
  'logo_code.gif',
  'more.png',
  'nc-eu.png',
  'nc-gt.png',
  'nc-jp.png',
  'nc.png',
  'nd.png',
  'noc.png',
  'no-endorse.png',
  'nolaw.png',
  'nolaw-small.png',
  'notice.png',
  'remix.png',
  'sampling.png',
  'sa.png',
  'seal.png',
  'share.png',
  'src.png',
  'understanding-header.png',
  'usage-guidelines.png',
  'usage-guidelines-small.png',
]

install_data(deed_files, install_dir: join_paths(datadir, 'licenses', 'images', 'deed'))
